namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-ems-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-ems-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-ems-platform-team"
    cloud-platform.justice.gov.uk/application: "Electronic Monitoring Service"
    cloud-platform.justice.gov.uk/owner: "HMPPS EMS Platform Team: hmpps-ems-platform-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-electronic-monitoring-service-platform"
    cloud-platform.justice.gov.uk/team-name: "hmpps-ems-team"
